@@ -20,14 +20,9 @@ func GetTestUdpServer(host string, port int) (server.Server, error) {
 		return nil, err
 	}
 
-	listener, err := net.ListenUDP("udp", addr)
-	if err != nil {
-		return nil, err
-	}
-
 	logp.Info("Started listening for UDP on: %s:%d", host, port)
 	return &UdpServer{
-		listener:          listener,
+		udpaddr:           addr,
 		receiveBufferSize: 1024,
 		done:              make(chan struct{}),
 		eventQueue:        make(chan server.Event),
@@ -44,6 +39,11 @@ func TestUdpServer(t *testing.T) {
 	}
 
 	svc.Start()
+	if err != nil {
+		t.Error(err)
+		t.FailNow()
+	}
+
 	defer svc.Stop()
 	writeToServer(t, "test1", host, port)
 	msg := <-svc.GetEvents()
